update spinner css

--- a/src/app/catch/resources/Catch.styl
+++ b/src/app/catch/resources/Catch.styl
@@ -75,3 +75,17 @@
 
 div[data-dojo-attach-point='batchForm'] .btn
     width 100%
+
+.claro
+    .dijitSpinner
+        .dijitArrowButtonInner
+            background-position: -142px center
+        .dijitUpArrowButtonHover
+            .dijitArrowButtonInner
+                background-position: -142px center
+        .dijitDownArrowButton
+            .dijitArrowButtonInner
+                background-position: -37px
+        .dijitSpinnerButtonContainer
+            width 16px
+            height 32px
