use data attribute for subtab link

--- a/src/app/catch/templates/Catch.html
+++ b/src/app/catch/templates/Catch.html
@@ -17,16 +17,24 @@
     <div class="btn-right-container pull-right btn-toolbar">
         <div class="btn-group more-info">
             <a class="btn btn-default disabled"
-                data-dojo-attach-event='onclick: moreInfo'>
+                data-dojo-attach-event="onclick: moreInfo"
+                data-tab="Diet_tab">
                 Diet</a>
             <a class="btn btn-default disabled"
-                data-dojo-attach-event='onclick: moreInfo'>
+                data-dojo-attach-event="onclick: moreInfo"
+                data-tab="Tag_tab">
                 Tag</a>
             <a class="btn btn-default disabled"
-                data-dojo-attach-event='onclick: moreInfo'>
+                data-dojo-attach-event="onclick: moreInfo"
+                data-tab="Health_tab">
                 Health</a>
             <a class="btn btn-default disabled"
-                data-dojo-attach-event="onclick: moreInfo">
+                data-dojo-attach-event="onclick: moreInfo"
+                data-tab="Collection_tab">
+                Hard body part collection</a>
+            <a class="btn btn-default disabled"
+                data-dojo-attach-event="onclick: moreInfo"
+                data-tab="Notes_tab">
                 Notes</a>
         </div>
         <div class="btn-group">
