--- a/src/app/catch/templates/MoreInfoDialog.html
+++ b/src/app/catch/templates/MoreInfoDialog.html
@@ -14,6 +14,7 @@
                         <li class='active'><a data-dojo-attach-point='dietTab' href="#Diet_tab" data-toggle="tab">Diet</a></li>
                         <li><a href="#Tag_tab" data-toggle="tab">Tags</a></li>
                         <li><a href="#Health_tab" data-toggle="tab">Health</a></li>
+                        <li><a href="#Collection_tab" data-toggle="tab">Hard body part collection</a></li>
                         <li><a href="#Notes_tab" data-toggle="tab">Notes</a></li>
                     </ul>
                     <div class="tab-content" data-dojo-attach-point='tabContainer'>
@@ -39,6 +40,10 @@
                         </div>
                         <div class="tab-pane fade" id="Health_tab">
                             <div data-dojo-attach-point="health" data-dojo-type="app/catch/Health"></div>
+                        </div>
+                        <div class="tab-pane fade" id="Collection_tab">
+                            <select class="form-control" data-dojo-attach-point="collectionPartSelect">
+                            </select>
                         </div>
                         <div class="tab-pane fade" id="Notes_tab">
                             <textarea class='form-control' rows='5' maxlength='250'
