store hard body collection data

--- a/src/app/catch/templates/Catch.html
+++ b/src/app/catch/templates/Catch.html
@@ -31,7 +31,7 @@
             <a class="btn btn-default disabled"
                 data-dojo-attach-event="onclick: moreInfo"
                 data-tab="Collection_tab">
-                Hard body part collection</a>
+                Hard Body Parts</a>
             <a class="btn btn-default disabled"
                 data-dojo-attach-event="onclick: moreInfo"
                 data-tab="Notes_tab">
