--- a/src/app/catch/templates/MoreInfoDialog.html
+++ b/src/app/catch/templates/MoreInfoDialog.html
@@ -14,7 +14,7 @@
                         <li class='active'><a data-dojo-attach-point='dietTab' href="#Diet_tab" data-toggle="tab">Diet</a></li>
                         <li><a href="#Tag_tab" data-toggle="tab">Tags</a></li>
                         <li><a href="#Health_tab" data-toggle="tab">Health</a></li>
-                        <li><a href="#Collection_tab" data-toggle="tab">Hard body part collection</a></li>
+                        <li><a href="#Collection_tab" data-toggle="tab">Hard Body Parts</a></li>
                         <li><a href="#Notes_tab" data-toggle="tab">Notes</a></li>
                     </ul>
                     <div class="tab-content" data-dojo-attach-point='tabContainer'>
