--- a/src/app/location/templates/Location.html
+++ b/src/app/location/templates/Location.html
@@ -23,21 +23,42 @@
     <div class="alert alert-danger hidden" data-dojo-attach-point='validateMsg'></div>
 
     <div class="row">
-        <div class="col-md-4">
-            <div class="form-group">
-                <label class='control-label'>Stream Length (meters)</label>
-                <span class="text-danger required">*</span><input type="number" data-dojo-attach-point="streamLengthTxt" class='form-control'>
-            </div>
-
-            <div class="form-group">
-                <label class='control-label'>Collection Date</label>
-                <span class="text-danger required">*</span><input type="date" data-dojo-attach-point='dateTxt' class='form-control'>
-            </div>
-
-            <div class="form-group">
-                <label class='control-label'>Additional Location Notes (optional)</label>
-                <textarea rows="4" data-dojo-attach-point='additionalNotesTxt' class='form-control'></textarea>
-            </div>
+        <div class="form-group col-md-6">
+            <label class='control-label'>Stream Length (meters)</label>
+            <span class="text-danger required">*</span><input type="number" data-dojo-attach-point="streamLengthTxt" class='form-control'/>
         </div>
     </div>
+
+    <div class="row">
+        <div class="form-group col-md-3">
+            <label class='control-label'>Collection Date</label>
+            <span class="text-danger required">*</span><input type="date" data-dojo-attach-point='dateTxt' class='form-control'/>
+        </div>
+        <div class="form-group col-md-3">
+            <label class='control-label'>Collection Time</label>
+            <input type="time" data-dojo-attach-point='timeTxt' class='form-control'/>
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label class='control-label'>Weather</label>
+            <select data-dojo-attach-point='weatherSelect' class='form-control'>
+            </select>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label class='control-label'>Additional Location Notes (optional)</label>
+            <textarea rows="4" data-dojo-attach-point='additionalNotesTxt' class='form-control'></textarea>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label class='control-label'>Observers</label>
+            <textarea rows="4" data-dojo-attach-point='observersTxt' class='form-control'></textarea>
+        </div>
+    </div>
+
 </div>
