use existing method and skip map reset

--- a/src/app/templates/Header.html
+++ b/src/app/templates/Header.html
@@ -3,10 +3,10 @@
         <a data-dojo-attach-point='title' class="navbar-brand" href='#'>Electro-Fishing Data Collection</a>
         <a class='version pull-left' data-dojo-attach-point='version' href='ChangeLog.html' target="_blank"></a>
         <ul class='nav navbar-nav'>
-            <li class='active'><a id="location" href='#locationTab' data-toggle='tab'>Location</a></li>
-            <li><a id="method" href='#methodTab' data-toggle='tab'>Method</a></li>
-            <li><a id="catch" href="#catchTab" data-toggle='tab'>Catch</a></li>
-            <li><a id="habitat" href="#habitatTab" data-toggle='tab'>Habitat</a></li>
+            <li class='active'><a href='#locationTab' data-toggle='tab'>Location</a></li>
+            <li><a href='#methodTab' data-toggle='tab'>Method</a></li>
+            <li><a href="#catchTab" data-toggle='tab'>Catch</a></li>
+            <li><a href="#habitatTab" data-toggle='tab'>Habitat</a></li>
         </ul>
         <button data-dojo-attach-point='submitBtn' data-loading-text='submitting report...' class="btn btn-success navbar-btn">Submit Report</button>
         <button data-dojo-attach-point="cancelBtn" class="btn btn-default navbar-btn">Cancel</button>
