update acidity to ph

--- a/src/app/habitat/templates/Habitat.html
+++ b/src/app/habitat/templates/Habitat.html
@@ -223,7 +223,7 @@
                     class='form-control'>
             </div>
             <div class="form-group">
-                <label class='control-label'>Acidity</label>
+                <label class='control-label'>pH</label>
                 <input type='number'
                     data-dojo-attach-point='acidityTxt'
                     min='0.00'
