--- a/src/app/habitat/templates/Habitat.html
+++ b/src/app/habitat/templates/Habitat.html
@@ -162,6 +162,15 @@
                             max='100'
                             class='form-control'>
                     </div>
+                    <div class="form-group">
+                        <label class='control-label'>Bedrock</label>
+                        <input type='number'
+                            data-dojo-attach-point='bedrockTxt'
+                            data-dojo-attach-event='onchange: onSedimentClassChange'
+                            min='0'
+                            max='100'
+                            class='form-control'>
+                    </div>
                     <div class="pull-right"> <!-- text-danger or text-success -->
                         <strong>Total</strong>
                         <span data-dojo-attach-point='sedTotalSpan' class="badge">0</span>
