--- a/src/app/habitat/templates/Habitat.html
+++ b/src/app/habitat/templates/Habitat.html
@@ -244,7 +244,39 @@
                 <input type='number'
                     data-dojo-attach-point='conductivityTxt'
                     min='0'
+                    max='15000'
+                    class='form-control'>
+            </div>
+            <div class="form-group">
+                <label class='control-label'>Dissolved Oxygen (mg/l)</label>
+                <input type='number'
+                    data-dojo-attach-point='oxygenTxt'
+                    min='0'
                     max='1500'
+                    class='form-control'>
+            </div>
+            <div class="form-group">
+                <label class='control-label'>Total Dissolved Solids (ppm)</label>
+                <input type='number'
+                    data-dojo-attach-point='solidsTxt'
+                    min='0'
+                    max='5000'
+                    class='form-control'>
+            </div>
+            <div class="form-group">
+                <label class='control-label'>Turbidity</label>
+                <input type='number'
+                    data-dojo-attach-point='turbidityTxt'
+                    min='0'
+                    max='100'
+                    class='form-control'>
+            </div>
+            <div class="form-group">
+                <label class='control-label'>Alkalinity (ppm CaCO3)</label>
+                <input type='number'
+                    data-dojo-attach-point='alkalinityTxt'
+                    min='0'
+                    max='1000'
                     class='form-control'>
             </div>
         </div>
