--- a/src/app/habitat/templates/Habitat.html
+++ b/src/app/habitat/templates/Habitat.html
@@ -100,6 +100,14 @@
                     max='100'
                     class='form-control'>
             </div>
+            <div class="form-group">
+                <label class='control-label'>Backwater Area (m2)</label>
+                <input type='number'
+                    data-dojo-attach-point='backwaterTxt'
+                    min='0'
+                    max='100'
+                    class='form-control'>
+            </div>
         </div>
         <div class="col-md-3">
             <div class="panel panel-default">
