--- a/src/app/habitat/templates/Habitat.html
+++ b/src/app/habitat/templates/Habitat.html
@@ -65,7 +65,7 @@
                 <select data-dojo-attach-point="understorySelect" class='form-control'></select>
             </div>
             <div class="form-group">
-                <label class='control-label'>Large Woody Debris</label>
+                <label class='control-label'>Large Woody Debris (count)</label>
                 <input type='number'
                     data-dojo-attach-point='largeWoodyDebrisTxt'
                     min='0'
