--- a/src/app/habitat/templates/Habitat.html
+++ b/src/app/habitat/templates/Habitat.html
@@ -248,7 +248,7 @@
                     class='form-control'>
             </div>
             <div class="form-group">
-                <label class='control-label'>Conductivity</label>
+                <label class='control-label'>Conductivity (μs/cm)</label>
                 <input type='number'
                     data-dojo-attach-point='conductivityTxt'
                     min='0'
