--- a/src/app/habitat/templates/Habitat.html
+++ b/src/app/habitat/templates/Habitat.html
@@ -243,8 +243,9 @@
                 <label class='control-label'>pH</label>
                 <input type='number'
                     data-dojo-attach-point='acidityTxt'
-                    min='0.00'
-                    max='14.00'
+                    min='0.0'
+                    max='14.0'
+                    step='0.1'
                     class='form-control'>
             </div>
             <div class="form-group">
