move select from location to equipment

--- a/src/app/location/templates/Location.html
+++ b/src/app/location/templates/Location.html
@@ -41,6 +41,14 @@
     </div>
     <div class="row">
         <div class="form-group col-md-6">
+            <label class="control-label">Survey Purpose (Purpose of Collection)</label>
+            <select data-dojo-attach-point="surveyPurposeSelect"
+                class='form-control'>
+            </select>
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-md-6">
             <label class='control-label'>Weather</label>
             <select data-dojo-attach-point='weatherSelect' class='form-control'>
             </select>
