--- a/src/app/location/templates/Location.html
+++ b/src/app/location/templates/Location.html
@@ -42,8 +42,7 @@
     <div class="row">
         <div class="form-group col-md-6">
             <label class="control-label">Survey Purpose (Purpose of Collection)</label>
-            <select data-dojo-attach-point="surveyPurposeSelect"
-                class='form-control'>
+            <select data-dojo-attach-point="surveyPurposeSelect" class='form-control'>
             </select>
         </div>
     </div>
