--- a/src/app/method/resources/Equipment.styl
+++ b/src/app/method/resources/Equipment.styl
@@ -1,5 +1,13 @@
-.equipment .nav-pills
-    margin-bottom 15px
+.equipment
+    .nav-pills
+        margin-bottom 15px
+    .dgrid
+        margin-bottom 10px
+        .field-EQUIPMENT_ID, .field-temp_id
+            display none
+        .dgrid-cell
+            font-size 14px
+            height 27px
 
 .hr--bold
     border-top 3px solid black + 50%
