--- a/src/app/method/templates/Equipment.html
+++ b/src/app/method/templates/Equipment.html
@@ -37,33 +37,22 @@
         </div>
     </div>
     <div class="row">
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-4">
             <label class="control-label"># Anodes</label>
             <input type="number"
                 data-dojo-attach-point="numberAnodesTxt"
+                data-dojo-attach-event="onchange: onAnodeNumChange"
                 value="1"
                 min="1"
                 max="5"
                 class="form-control">
         </div>
-        <div class="form-group col-md-3">
-            <label class="control-label">Anode Diameter (centimeters)</label>
-            <input type="number"
-                data-dojo-attach-point="anodeDiameterTxt"
-                min="1"
-                max="750"
-                class="form-control">
+        <div class="col-md-8">
+            <div data-dojo-attach-point="gridDiv"></div>
         </div>
-        <div class="form-group col-md-3">
-            <label class="control-label">Stock Diameter (centimeters)</label>
-            <input type="number"
-            data-dojo-attach-point="stockDiameterTxt"
-            min="0.1"
-            max="2.54"
-            step="0.01"
-            class="form-control">
-        </div>
-        <div class="form-group col-md-3">
+    </div>
+    <div class="row">
+        <div class="form-group col-md-4">
             <label class="control-label">Cathode Length (centimeters)</label>
             <input type="number"
                 data-dojo-attach-point="cathodeLengthTxt"
@@ -72,8 +61,6 @@
                 step="0.01"
                 class="form-control">
         </div>
-    </div>
-    <div class="row">
         <div class="form-group col-md-4">
             <label class="control-label">Cathode Diameter (centimeters)</label>
             <input type="number"
@@ -83,19 +70,21 @@
                 step="0.01"
                 class="form-control">
         </div>
-        <div class="form-group col-md-3">
+        <div class="form-group col-md-4">
             <label class="control-label">Machine Resistance (ohms)</label>
             <input type="number"
                 data-dojo-attach-point="machineResistenceTxt"
                 class="form-control">
         </div>
-        <div class="form-group col-md-3">
+    </div>
+    <div class="row">
+        <div class="form-group col-md-4">
             <label class="control-label">Waveform</label>
             <select data-dojo-attach-point="waveformSelect"
                 class="form-control">
             </select>
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-4">
             <label class="control-label">Voltage (volts)</label>
             <input type="number"
                 data-dojo-attach-point="voltsTxt"
@@ -104,9 +93,7 @@
                 step="0.01"
                 class="form-control">
         </div>
-    </div>
-    <div class="row">
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-4">
             <label class="control-label">Duty Cycle (%)</label>
             <input type="number"
                 data-dojo-attach-point="dutyCycleTxt"
@@ -114,7 +101,9 @@
                 max="100"
                 class="form-control">
         </div>
-        <div class="form-group col-md-2">
+    </div>
+    <div class="row">
+        <div class="form-group col-md-4">
             <label class="control-label">Frequency (hertz)</label>
             <input type="number"
                 data-dojo-attach-point="frequencyTxt"
@@ -122,7 +111,7 @@
                 max="1000"
                 class="form-control">
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-4">
             <label class="control-label">Amps</label>
             <input type="number"
                 data-dojo-attach-point="ampsTxt"
@@ -131,7 +120,7 @@
                 step="0.1"
                 class="form-control">
         </div>
-        <div class="form-group col-md-3">
+        <div class="form-group col-md-4">
             <label class="control-label">Duration/Pedal Time (seconds)</label>
             <input type="number"
             data-dojo-attach-point="durationTxt"
