refactor out pass buttons as GridTab widget
In preparation for using the new widget on the Habitat tab.

--- a/src/app/resources/App.styl
+++ b/src/app/resources/App.styl
@@ -15,6 +15,7 @@
 @import '../habitat/resources/Habitat.css';
 @import 'OtherOptionHandler.css';
 @import '../../toaster/dist/resources/Toaster.css';
+@import 'GridTab.css';
 
 .app .toaster {
     position: fixed;
