Add transect grid to Habitat Tab
Finishes the front-end requirements for #54.

--- a/src/app/habitat/resources/Habitat.styl
+++ b/src/app/habitat/resources/Habitat.styl
@@ -4,3 +4,7 @@
 
     .text-success .badge
         background-color #468847
+
+    .dgrid
+        .field-temp_id, .field-TRANSECT_ID
+            display none
