--- a/src/app/resources/App.styl
+++ b/src/app/resources/App.styl
@@ -52,10 +52,15 @@ footer {
 .dropdown-menu {
     z-index: 1051; /* required to make them appear on top of bootstrap modal*/
 }
-.app .dgrid-scroller {
-    margin-top: 27px;
-}
-.app .form-group .help-block {
+
+.app
+    .dgrid-scroller
+        margin-top 27px
+        .dgrid-cell
+            font-size 14px
+            height 27px
+
+.form-group .help-block {
     margin: 0;
 }
 
