--- a/src/app/templates/GridTab.html
+++ b/src/app/templates/GridTab.html
@@ -1,5 +1,5 @@
 <div>
-    <b>Pass</b>
+    <b>${name}</b>
     <div class="btn-group" data-toggle="buttons"
         data-dojo-attach-point="tabBtnContainer">
         <label class="btn btn-primary active"
