--- a/src/app/catch/templates/Catch.html
+++ b/src/app/catch/templates/Catch.html
@@ -1,19 +1,5 @@
 <div>
-    <b>Pass</b>
-    <div class="btn-group" data-toggle="buttons"
-        data-dojo-attach-point='passBtnContainer'>
-        <label class='btn btn-primary active'
-            data-dojo-attach-event='onclick: changePass'>
-            <input type='radio' name='pass'>
-            1
-        </label>
-    </div>
-    <button class='btn btn-default btn-sm'
-        data-dojo-attach-point='addPassBtn'
-        data-dojo-attach-event='onclick: addPassClick'>
-        <i class="glyphicon glyphicon-plus"
-            data-dojo-attach-point='icon'></i>
-    </button>
+    <div data-dojo-attach-point="gridTabDiv"></div>
     <div class="btn-right-container pull-right btn-toolbar">
         <div class="btn-group more-info">
             <a class="btn btn-default disabled"
@@ -38,35 +24,35 @@
                 Notes</a>
         </div>
         <div class="btn-group">
-            <a class='btn btn-info'
-                data-dojo-attach-point='batchBtn'
-                data-toggle='button'
-                data-dojo-attach-event='onclick: onBatchToggle'>
+            <a class="btn btn-info"
+                data-dojo-attach-point="batchBtn"
+                data-toggle="button"
+                data-dojo-attach-event="onclick: onBatchToggle">
                 Batch</a>
         </div>
         <div class="btn-group">
             <a class="btn btn-danger"
-                data-dojo-attach-point='deleteRowBtn'
-                data-dojo-attach-event='onclick: deleteRow'>
+                data-dojo-attach-point="deleteRowBtn"
+                data-dojo-attach-event="onclick: deleteRow">
                 Delete Row</a>
-            <a class='btn btn-success'
-                data-dojo-attach-point='addRowBtn'
-                data-dojo-attach-event='onclick: addRow'>
+            <a class="btn btn-success"
+                data-dojo-attach-point="addRowBtn"
+                data-dojo-attach-event="onclick: addRow">
                 Add Row</a>
         </div>
     </div>
     <div data-dojo-attach-point="gridDiv"></div>
-    <div class="hidden" data-dojo-attach-point='batchFormContainer'>
+    <div class="hidden" data-dojo-attach-point="batchFormContainer">
         <div data-dojo-attach-point="batchForm">
             <div class="form-group">
                 <label class="control-label">Weight</label>
-                <input type="number" class='form-control'
-                    step='0.1'
-                    data-dojo-attach-point='batchWeightTxt'>
+                <input type="number" class="form-control"
+                    step="0.1"
+                    data-dojo-attach-point="batchWeightTxt">
             </div>
             <button class="btn btn-primary" disabled
-                data-dojo-attach-point='batchGoBtn'
-                data-dojo-attach-event='onclick: batch'>Go</button>
+                data-dojo-attach-point="batchGoBtn"
+                data-dojo-attach-event="onclick: batch">Go</button>
         </div>
     </div>
     <div data-dojo-attach-point="moreInfoDialogDiv"></div>
