--- a/src/app/tests/HabitatTabTests.html
+++ b/src/app/tests/HabitatTabTests.html
@@ -1,16 +1,13 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
+    <title>Habitat Tab Tests</title>
+
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <!--[if lte IE 8]>
-        <link rel="stylesheet" href="leaflet/leaflet.ie.css" />
-    <![endif]-->
-    <!-- bootstrap .css files (and .js files for that matter) to 
-        not play nice with the dojo build system -->
-    <link rel="stylesheet" href="../../bootstrap/css/bootstrap.css"/>
-    <link rel='stylesheet' href='../resources/App.css'>
+    <link rel="stylesheet" href="../resources/App.css">
     <style>
         html, body {
             width: 1160px;
@@ -19,54 +16,34 @@
         input {
             height: 30px !important;
         }
+        .main-container {
+            border: 1px solid gray;
+        }
     </style>
 </head>
-<body>
-    <div id='testDiv'></div>
-    <script data-dojo-config='isDebug: 1' src='../../dojo/dojo.js'></script>
-    <script>
-        define.amd.jQuery = true;
-        require({
-            packages: [
-                {
-                    name: 'app',
-                    location: '../app'
-                },{
-                    name: 'ijit',
-                    location: '../ijit'
-                },{
-                    name: 'bootstrap',
-                    location: '../bootstrap',
-                    main: 'js/bootstrap'
-                },{
-                    name: 'jquery',
-                    location: '../jquery',
-                    main: 'jquery-1.10.0'
-                },{
-                    name: 'leaflet',
-                    location: '../leaflet',
-                    main: 'leaflet-src'
-                }, {
-                    name: 'agrc',
-                    location: '../agrc'
-                }, {
-                    name: 'dgrid',
-                    location: '../dgrid'
-                }, {
-                    name: 'put-selector',
-                    location: '../put-selector'
-                }, {
-                    name: 'xstyle',
-                    location: '../xstyle'
-                }, {
-                    name: 'bootstrap-combobox',
-                    location: '../bootstrap-combobox'
-                }
-            ]
-        }, ['jquery', 'bootstrap', 'app/habitat/Habitat', 'dojo/domReady!', 'app/main'], 
+<body class="claro">
+    <div class="app main-container container">
+        <div id="testDiv"></div>
+    </div>
 
-        function (jquery, boot, Habitat) {
-            testWidget = new Habitat(null, 'testDiv');
+    <script type="text/javascript" src="../../jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="../../bootstrap/dist/js/bootstrap.js"></script>
+    <script data-dojo-config="isDebug: 1" src="../../dojo/dojo.js"></script>
+    <script src="../../app/packages.js"></script>
+    <script>
+        require({baseUrl: '../../'}, [
+            'jquery',
+            'bootstrap',
+            'app/habitat/Habitat',
+            'ijit/modules/NumericInputValidator',
+            'dojo/domReady!'
+        ], function (jquery, boot, Habitat, NumericInputValidator) {
+            window.testWidget = new Habitat(null, 'testDiv');
+            window.testWidget.startup();
+            window.testWidget.grid.startup();
+
+            var numericValidator = new NumericInputValidator();
+            numericValidator.init();
         });
     </script>
 </body>
