--- a/_src/app/catch/resources/Catch.styl
+++ b/_src/app/catch/resources/Catch.styl
@@ -5,7 +5,7 @@
 @import 'Health.css'
 
 .catch
-    [data-dojo-attach-point='gridDiv']
+    [data-dojo-attach-point='gridDiv'], .bulk-upload-container
         margin-top 10px
 
     .dgrid-header
@@ -72,6 +72,24 @@
 
         &.active
             background-color #286090 - 25
+
+    // got from: https://www.abeautifulsite.net/whipping-file-inputs-into-shape-with-bootstrap-3
+    .btn-file
+        position relative
+        overflow hidden
+        input[type=file]
+            position absolute
+            top 0
+            right 0
+            min-width 100%
+            min-height 100%
+            font-size 100px
+            text-align right
+            opacity 0
+            outline none
+            background white
+            cursor inherit
+            display block
 
 div[data-dojo-attach-point='batchForm'] .btn
     width 100%
