--- a/_src/app/templates/OtherOptionHandler.html
+++ b/_src/app/templates/OtherOptionHandler.html
@@ -1,35 +1,29 @@
 <div>
-    <div class="modal fade" data-dojo-attach-point='modal'>
+    <div class="modal fade" data-dojo-attach-point="modal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button class="close" data-dismiss='modal'>&times;</button>
+                    <button class="close" data-dismiss="modal">&times;</button>
                     <h4>Add Additional Option</h4>
                 </div>
                 <div class="modal-body">
                     <fieldset>
                         <legend>Existing Options</legend>
-                        <ul data-dojo-attach-point='existingOptionsList'></ul>
+                        <ul data-dojo-attach-point="existingOptionsList"></ul>
                     </fieldset>
                     <fieldset>
                         <legend>New Option</legend>
-                        <label>Code</label>
                         <div class="form-group">
-                            <input data-dojo-attach-point='codeTxt' class='form-control' type="text"
-                                data-dojo-attach-event='keyup: onTxtChange' tabindex="1">
-                        </div>
-                        <div class="form-group">
-                            <label>Description</label>
-                            <input data-dojo-attach-point='descTxt' class='form-control' type="text"
-                                data-dojo-attach-event='keyup: onTxtChange' tabindex="2">
+                            <input data-dojo-attach-point="codeTxt" class="form-control" type="text"
+                                data-dojo-attach-event="keyup: onTxtChange" tabindex="1">
                         </div>
                     </fieldset>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-default" data-dismiss='modal' data-dojo-attach-event='click: onCancel' tabindex="4">Cancel</button>
+                    <button class="btn btn-default" data-dismiss="modal" data-dojo-attach-event="click: onCancel" tabindex="4">Cancel</button>
                     <button class="btn btn-primary" disabled tabindex="3"
                         data-dojo-attach-event="click: onSubmit"
-                        data-dojo-attach-point='submitBtn'>Submit</button>
+                        data-dojo-attach-point="submitBtn">Submit</button>
                 </div>
             </div>
         </div>
