--- a/_src/app/location/templates/VerifyMap.html
+++ b/_src/app/location/templates/VerifyMap.html
@@ -1,4 +1,4 @@
 <div>
     <div data-dojo-attach-point="streamSearchDiv"></div>
-    <div data-dojo-attach-point='mapDiv' class='map'></div>
+    <div data-dojo-attach-point="mapDiv" class="map"></div>
 </div>
