--- a/_src/app/catch/templates/Tag.html
+++ b/_src/app/catch/templates/Tag.html
@@ -37,7 +37,7 @@
         </div>
         <div class="form-group col-md-3">
             <label>Transmitter Freq. (kHz)</label>
-            <input type="text" class="form-control"
+            <input type="number" class="form-control"
                 data-dojo-attach-point="transmitterFreqTxt"
                 min="1" max="3000">
         </div>
