--- a/_src/app/templates/SummaryReport.html
+++ b/_src/app/templates/SummaryReport.html
@@ -11,7 +11,9 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-success" data-dojo-attach-event="click: onConfirm">Confirm</button>
+                    <button type="button" class="btn btn-success"
+                        data-testid="summaryConfirmBtn"
+                        data-dojo-attach-event="click: onConfirm">Confirm</button>
                 </div>
             </div>
         </div>
