Allow decimals for Bankful Width and Wetted Width Closes #151

--- a/_src/app/habitat/templates/Habitat.html
+++ b/_src/app/habitat/templates/Habitat.html
@@ -248,6 +248,7 @@
                 <label class="control-label">Bankfull Width (m)</label>
                 <input type="number"
                     data-dojo-attach-point="bankfulWidthTxt"
+                    step="0.01"
                     min="0"
                     max="1000"
                     class="form-control">
@@ -258,6 +259,7 @@
                 <label class="control-label">Wetted Width (m)</label>
                 <input type="number"
                     data-dojo-attach-point="wettedWidthTxt"
+                    step="0.01"
                     min="0"
                     max="1000"
                     class="form-control">
