--- a/_src/app/catch/templates/Tag.html
+++ b/_src/app/catch/templates/Tag.html
@@ -36,7 +36,7 @@
             </select>
         </div>
         <div class="form-group col-md-3">
-            <label>Transmitter Freq. (kHz)</label>
+            <label>Transmitter Freq.</label>
             <input type="number" class="form-control"
                 data-dojo-attach-point="transmitterFreqTxt"
                 min="1" max="3000">
