--- a/_src/app/habitat/templates/Habitat.html
+++ b/_src/app/habitat/templates/Habitat.html
@@ -138,11 +138,11 @@
                     class="form-control">
             </div>
             <div class="form-group">
-                <label class="control-label">Turbidity</label>
+                <label class="control-label">Turbidity (NTU)</label>
                 <input type="number"
                     data-dojo-attach-point="turbidityTxt"
                     min="0"
-                    max="100"
+                    max="3000"
                     class="form-control">
             </div>
             <div class="form-group">
