--- a/_src/app/location/templates/Location.html
+++ b/_src/app/location/templates/Location.html
@@ -42,6 +42,7 @@
     <div class="row">
         <div class="form-group col-md-6">
             <label class="control-label">Survey Purpose (Purpose of Collection)</label>
+            <span class="text-danger required">*</span>
             <select data-dojo-attach-point="surveyPurposeSelect" class="form-control">
             </select>
         </div>
@@ -64,6 +65,7 @@
     <div class="row">
         <div class="form-group col-md-6">
             <label class="control-label">Observers</label>
+            <span class="text-danger required">*</span>
             <textarea rows="4" data-dojo-attach-point="observersTxt" class="form-control"></textarea>
         </div>
     </div>
