--- a/_src/app/resources/NewCollectionEvent.styl
+++ b/_src/app/resources/NewCollectionEvent.styl
@@ -1,16 +1,13 @@
 @import '../../bootstrap-combobox/css/bootstrap-combobox.css';
-.new-collection-event > .nav-tabs a {
-    font-size: 20px;
-}
-.new-collection-event .heading {
-    font-size: 18px;
-}
-.new-collection-event>.row {
-    padding-left: 15px;
-}
-.new-collection-event {
-    overflow-x: hidden;
-}
-.new-collection-event>.alert {
-    margin-bottom: 10px;
-}
+.new-collection-event
+    overflow-x: hidden
+    > .nav-tabs a
+        font-size: 20px
+    .heading
+        font-size: 18px
+    &>.row
+        padding-left: 15px
+    &>.alert
+        margin-bottom: 10px
+    .alert-success .btn.pull-right
+        margin-top: -7px
