feat: add link to query app Related to https://github.com/agrc/electrofishing-query/issues/20

--- a/_src/app/templates/Header.html
+++ b/_src/app/templates/Header.html
@@ -12,6 +12,9 @@
         <button data-dojo-attach-point="cancelBtn" class="btn btn-default navbar-btn">Cancel</button>
         <ul class="nav navbar-nav navbar-right">
             <li>
+                <a href="/dwrefdb/query" target="_blank">Search</a>
+            </li>
+            <li>
                 <a role="button" data-toggle="modal" href="#settingsModal" class="btn btn-small pull-right">
                     Settings <i class="icon-wrench"></i>
                 </a>
