feat: load streams & lakes as feature layers display them always - Removed setting for toggling display of streams/lakes layers - Upgrade leaflet & esri-leaflet to latest versions.

--- a/_src/app/location/resources/VerifyMap.styl
+++ b/_src/app/location/resources/VerifyMap.styl
@@ -1,11 +1,11 @@
-.verify-map .map {
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-}
-.verify-map {
-    position: relative;
-}
-.station .verify-map .map {
-    height: 320px;
-}
+.verify-map
+    position relative
+    .map
+        height 100%
+        width 100%
+        z-index 1
+        .leaflet-tooltip
+            padding 0 2px
+            font-size 0.8em
+.station .verify-map .map
+    height 320px
