chore: enable incremental adoption of React
Related to #224

--- a/_src/app/templates/App.html
+++ b/_src/app/templates/App.html
@@ -1,6 +1,6 @@
 <div>
     <!-- HEADER -->
-    <div data-dojo-attach-point='header' data-dojo-type='app/Header'></div>
+    <div data-dojo-attach-point='header'></div>
 
     <!-- MAIN CONTENT -->
     <div class='main-container container'>
