feat: agrc-widgets/toaster -> react-toaster

--- a/_src/app/templates/App.html
+++ b/_src/app/templates/App.html
@@ -16,4 +16,6 @@
             Built by <a href="http://gis.utah.gov/developer" title="AGRC" target='_blank'>AGRC</a>
         </div>
     </footer>
+
+    <div data-dojo-attach-point="toaster"></div>
 </div>
