wip: switch to top-down approach for converting to react components

--- a/_src/react-app/index.scss
+++ b/_src/react-app/index.scss
@@ -1,2 +1,4 @@
 @use 'components/Header';
+@use 'components/location/VerifyMap';
 @use '../../node_modules/react-toastify/scss/main.scss';
+@use '../../node_modules/leaflet/dist/leaflet.css';
