chore: add unique ids to all input controls

--- a/_src/app/catch/templates/MoreInfoDialog.html
+++ b/_src/app/catch/templates/MoreInfoDialog.html
@@ -45,10 +45,20 @@
               <div data-dojo-attach-point="health" data-dojo-type="app/catch/Health"></div>
             </div>
             <div class="tab-pane fade" id="Collection_tab">
-              <select class="form-control" data-dojo-attach-point="collectionPartSelect"></select>
+              <select
+                class="form-control"
+                data-dojo-attach-point="collectionPartSelect"
+                id="collectionPartSelect"
+              ></select>
             </div>
             <div class="tab-pane fade" id="Notes_tab">
-              <textarea class="form-control" rows="5" maxlength="250" data-dojo-attach-point="notesTxtArea"></textarea>
+              <textarea
+                class="form-control"
+                rows="5"
+                maxlength="250"
+                data-dojo-attach-point="notesTxtArea"
+                id="notesTxtArea"
+              ></textarea>
             </div>
           </div>
         </div>
