--- a/_src/app/catch/templates/Tag.html
+++ b/_src/app/catch/templates/Tag.html
@@ -2,11 +2,11 @@
   <div class="row">
     <div class="form-group col-md-3">
       <label>New Tag?</label>
-      <select data-dojo-attach-point="newSelect" class="form-control"></select>
+      <select data-dojo-attach-point="newSelect" id="newSelect" class="form-control"></select>
     </div>
     <div class="form-group col-md-4">
       <label>Type</label>
-      <select data-dojo-attach-point="typeSelect" class="form-control"></select>
+      <select data-dojo-attach-point="typeSelect" id="typeSelect" class="form-control"></select>
     </div>
   </div>
   <div class="row">
@@ -16,17 +16,17 @@
     </div>
     <div class="form-group col-md-3">
       <label>Color</label>
-      <select data-dojo-attach-point="colorSelect" class="form-control"></select>
+      <select data-dojo-attach-point="colorSelect" id="colorSelect" class="form-control"></select>
     </div>
     <div class="form-group col-md-4">
       <label>Location</label>
-      <select data-dojo-attach-point="locationSelect" class="form-control"></select>
+      <select data-dojo-attach-point="locationSelect" id="locationSelect" class="form-control"></select>
     </div>
   </div>
   <div class="row">
     <div class="form-group col-md-4">
       <label>Transponder Freq. (kHz)</label>
-      <select data-dojo-attach-point="transponderFreqSelect" class="form-control"></select>
+      <select data-dojo-attach-point="transponderFreqSelect" id="transponderFreqSelect" class="form-control"></select>
     </div>
     <div class="form-group col-md-3">
       <label>Transmitter Freq.</label>
@@ -34,7 +34,11 @@
     </div>
     <div class="form-group col-md-4">
       <label>Transmitter Freq. Type</label>
-      <select data-dojo-attach-point="transmitterFreqTypeSelect" class="form-control"></select>
+      <select
+        data-dojo-attach-point="transmitterFreqTypeSelect"
+        id="transmitterFreqTypeSelect"
+        class="form-control"
+      ></select>
     </div>
   </div>
   <button class="btn btn-default" data-dojo-attach-point="btn">
