--- a/_src/app/habitat/templates/Habitat.html
+++ b/_src/app/habitat/templates/Habitat.html
@@ -8,41 +8,76 @@
     <div class="col-md-3">
       <div class="form-group">
         <label class="control-label">Percentage of Bank Vegetated</label>
-        <input type="number" data-dojo-attach-point="bankVegTxt" min="0" max="100" class="form-control" />
+        <input
+          type="number"
+          data-dojo-attach-point="bankVegTxt"
+          min="0"
+          max="100"
+          class="form-control"
+          id="bankVegTxt"
+        />
       </div>
       <div class="form-group">
         <label class="control-label">Dominant Overstory</label>
-        <select data-dojo-attach-point="overstorySelect" class="form-control"></select>
+        <select data-dojo-attach-point="overstorySelect" class="form-control" id="overstorySelect"></select>
       </div>
       <div class="form-group">
         <label class="control-label">Dominant Understory</label>
-        <select data-dojo-attach-point="understorySelect" class="form-control"></select>
+        <select data-dojo-attach-point="understorySelect" class="form-control" id="understorySelect"></select>
       </div>
       <div class="form-group">
         <label class="control-label">Large Woody Debris (count)</label>
-        <input type="number" data-dojo-attach-point="largeWoodyDebrisTxt" min="0" max="1000" class="form-control" />
+        <input
+          type="number"
+          data-dojo-attach-point="largeWoodyDebrisTxt"
+          min="0"
+          max="1000"
+          class="form-control"
+          id="largeWoodyDebrisTxt"
+        />
       </div>
       <div class="form-group">
         <label class="control-label">Percentage of Pool Area</label>
-        <input type="number" data-dojo-attach-point="poolAreaTxt" min="0" max="100" class="form-control" />
+        <input
+          type="number"
+          data-dojo-attach-point="poolAreaTxt"
+          min="0"
+          max="100"
+          class="form-control"
+          id="poolAreaTxt"
+        />
       </div>
       <div class="form-group">
         <label class="control-label">Presence of Spring</label>
-        <select data-dojo-attach-point="springSelect" class="form-control"></select>
+        <select data-dojo-attach-point="springSelect" class="form-control" id="springSelect"></select>
       </div>
       <div class="form-group">
         <label class="control-label">Percentage of Riffle Area</label>
-        <input type="number" data-dojo-attach-point="riffleAreaTxt" min="0" max="100" class="form-control" />
+        <input
+          type="number"
+          data-dojo-attach-point="riffleAreaTxt"
+          min="0"
+          max="100"
+          class="form-control"
+          id="riffleAreaTxt"
+        />
       </div>
     </div>
     <div class="col-md-3">
       <div class="form-group">
         <label class="control-label">Percentage of Run Area</label>
-        <input type="number" data-dojo-attach-point="runAreaTxt" min="0" max="100" class="form-control" />
+        <input
+          type="number"
+          data-dojo-attach-point="runAreaTxt"
+          min="0"
+          max="100"
+          class="form-control"
+          id="runAreaTxt"
+        />
       </div>
       <div class="form-group">
         <label class="control-label">Backwater Area (m2)</label>
-        <input type="number" data-dojo-attach-point="backwaterTxt" min="0" class="form-control" />
+        <input type="number" data-dojo-attach-point="backwaterTxt" min="0" class="form-control" id="backwaterTxt" />
       </div>
       <div class="form-group">
         <label class="control-label">Sinuosity</label>
@@ -57,7 +92,14 @@
       </div>
       <div class="form-group">
         <label class="control-label">Percentage of Banks Eroding</label>
-        <input type="number" data-dojo-attach-point="banksErodingTxt" min="0" max="100" class="form-control" />
+        <input
+          type="number"
+          data-dojo-attach-point="banksErodingTxt"
+          min="0"
+          max="100"
+          class="form-control"
+          id="banksErodingTxt"
+        />
       </div>
     </div>
     <div class="col-md-3">
@@ -74,27 +116,70 @@
       </div>
       <div class="form-group">
         <label class="control-label">pH</label>
-        <input type="number" data-dojo-attach-point="acidityTxt" min="0.0" max="14.0" step="0.1" class="form-control" />
+        <input
+          type="number"
+          data-dojo-attach-point="acidityTxt"
+          min="0.0"
+          max="14.0"
+          step="0.1"
+          class="form-control"
+          id="acidityTxt"
+        />
       </div>
       <div class="form-group">
         <label class="control-label">Conductivity (μs/cm)</label>
-        <input type="number" data-dojo-attach-point="conductivityTxt" min="0" max="15000" class="form-control" />
+        <input
+          type="number"
+          data-dojo-attach-point="conductivityTxt"
+          min="0"
+          max="15000"
+          class="form-control"
+          id="conductivityTxt"
+        />
       </div>
       <div class="form-group">
         <label class="control-label">Dissolved Oxygen (mg/l)</label>
-        <input type="number" data-dojo-attach-point="oxygenTxt" min="0" max="1500" class="form-control" />
+        <input
+          type="number"
+          data-dojo-attach-point="oxygenTxt"
+          min="0"
+          max="1500"
+          class="form-control"
+          id="oxygenTxt"
+        />
       </div>
       <div class="form-group">
         <label class="control-label">Total Dissolved Solids (ppm)</label>
-        <input type="number" data-dojo-attach-point="solidsTxt" min="0" max="5000" class="form-control" />
+        <input
+          type="number"
+          data-dojo-attach-point="solidsTxt"
+          min="0"
+          max="5000"
+          class="form-control"
+          id="solidsTxt"
+        />
       </div>
       <div class="form-group">
         <label class="control-label">Turbidity (NTU)</label>
-        <input type="number" data-dojo-attach-point="turbidityTxt" min="0" max="3000" class="form-control" />
+        <input
+          type="number"
+          data-dojo-attach-point="turbidityTxt"
+          min="0"
+          max="3000"
+          class="form-control"
+          id="turbidityTxt"
+        />
       </div>
       <div class="form-group">
         <label class="control-label">Alkalinity (ppm CaCO3)</label>
-        <input type="number" data-dojo-attach-point="alkalinityTxt" min="0" max="1000" class="form-control" />
+        <input
+          type="number"
+          data-dojo-attach-point="alkalinityTxt"
+          min="0"
+          max="1000"
+          class="form-control"
+          id="alkalinityTxt"
+        />
       </div>
     </div>
     <div class="col-md-3">
@@ -231,7 +316,7 @@
     <div class="col-md-3">
       <div class="form-group">
         <label class="control-label">Starting bank</label>
-        <select data-dojo-attach-point="startingBank" class="form-control"></select>
+        <select data-dojo-attach-point="startingBank" class="form-control" id="startingBank"></select>
       </div>
     </div>
     <div class="col-md-3" style="margin-top: 25px">
