--- a/_src/app/location/templates/Station.html
+++ b/_src/app/location/templates/Station.html
@@ -3,7 +3,7 @@
   <p class="help-block">Select a station by clicking on the map above.</p>
   <div class="form-inline">
     <div class="form-group">
-      <input type="text" disabled data-dojo-attach-point="stationTxt" class="form-control" />
+      <input type="text" disabled data-dojo-attach-point="stationTxt" class="form-control" id="stationTxt" />
     </div>
     <a class="btn btn-default" data-dojo-attach-point="newStationBtn" data-toggle="modal" href="#stationModal">
       <span class="glyphicon glyphicon-plus"></span>
@@ -29,11 +29,11 @@
           <div class="row">
             <div class="form-group col-md-3">
               <label class="control-label">Name</label>
-              <input type="text" data-dojo-attach-point="stationNameTxt" class="form-control" />
+              <input type="text" data-dojo-attach-point="stationNameTxt" class="form-control" id="stationNameTxt" />
             </div>
             <div class="form-group col-md-3">
               <label class="control-label">Stream Type</label>
-              <select data-dojo-attach-point="streamTypeSelect" class="form-control">
+              <select data-dojo-attach-point="streamTypeSelect" class="form-control" id="streamTypeSelect">
                 <option value=""></option>
               </select>
             </div>
@@ -53,7 +53,13 @@
               </button>
             </div>
             <div class="form-group">
-              <input data-dojo-attach-point="streamLakeInput" class="form-control" type="text" disabled />
+              <input
+                data-dojo-attach-point="streamLakeInput"
+                class="form-control"
+                type="text"
+                disabled
+                id="streamLakeInput"
+              />
             </div>
           </div>
           <div data-dojo-attach-point="mapDiv"></div>
