--- a/_src/app/method/templates/Equipment.html
+++ b/_src/app/method/templates/Equipment.html
@@ -1,5 +1,5 @@
 <div>
-  <input type="text" data-dojo-attach-point="typeTxt" class="hidden" value="backpack" />
+  <input type="text" data-dojo-attach-point="typeTxt" class="hidden" value="backpack" id="typeTxt" />
   <ul class="nav nav-pills" data-dojo-attach-event="click: toggleFields">
     <li class="active" data-type="backpack">
       <a href="#" data-toggle="tab" id="Backpack">Backpack</a>
@@ -14,19 +14,26 @@
   <div class="row">
     <div class="form-group col-md-3">
       <label>Model</label>
-      <select data-dojo-attach-point="modelSelect" class="form-control"></select>
+      <select data-dojo-attach-point="modelSelect" class="form-control" id="modelSelect"></select>
     </div>
     <div class="form-group col-md-3 hidden">
       <label>Array Type</label>
-      <select data-dojo-attach-point="arrayTypeSelect" class="form-control"></select>
+      <select data-dojo-attach-point="arrayTypeSelect" class="form-control" id="arrayTypeSelect"></select>
     </div>
     <div class="form-group col-md-3">
       <label># Netters</label>
-      <input type="number" data-dojo-attach-point="numberNettersTxt" class="form-control" min="1" max="20" />
+      <input
+        type="number"
+        data-dojo-attach-point="numberNettersTxt"
+        class="form-control"
+        min="1"
+        max="20"
+        id="numberNettersTxt"
+      />
     </div>
     <div class="form-group col-md-3 hidden">
       <label>Cathode Type</label>
-      <select data-dojo-attach-point="cathodeTypeSelect" class="form-control"></select>
+      <select data-dojo-attach-point="cathodeTypeSelect" class="form-control" id="cathodeTypeSelect"></select>
     </div>
   </div>
   <div class="row">
@@ -40,6 +47,7 @@
         min="1"
         max="5"
         class="form-control"
+        id="numberAnodesTxt"
       />
     </div>
     <div class="col-md-8">
@@ -56,6 +64,7 @@
         max="305"
         step="0.01"
         class="form-control"
+        id="cathodeLengthTxt"
       />
     </div>
     <div class="form-group col-md-4">
@@ -67,39 +76,82 @@
         max="2.54"
         step="0.01"
         class="form-control"
+        id="cathodeDiameterTxt"
       />
     </div>
     <div class="form-group col-md-4">
       <label class="control-label">Machine Resistance (ohms)</label>
-      <input type="number" data-dojo-attach-point="machineResistenceTxt" class="form-control" />
+      <input
+        type="number"
+        data-dojo-attach-point="machineResistenceTxt"
+        class="form-control"
+        id="machineResistenceTxt"
+      />
     </div>
   </div>
   <div class="row">
     <div class="form-group col-md-4">
       <label class="control-label">Waveform</label>
-      <select data-dojo-attach-point="waveformSelect" class="form-control"></select>
+      <select data-dojo-attach-point="waveformSelect" class="form-control" id="waveFormSelect"></select>
     </div>
     <div class="form-group col-md-4">
       <label class="control-label">Voltage (volts)</label>
-      <input type="number" data-dojo-attach-point="voltsTxt" min="0" max="1000" step="0.01" class="form-control" />
+      <input
+        type="number"
+        data-dojo-attach-point="voltsTxt"
+        min="0"
+        max="1000"
+        step="0.01"
+        class="form-control"
+        id="voltsTxt"
+      />
     </div>
     <div class="form-group col-md-4">
       <label class="control-label">Duty Cycle (%)</label>
-      <input type="number" data-dojo-attach-point="dutyCycleTxt" min="0" max="100" class="form-control" />
+      <input
+        type="number"
+        data-dojo-attach-point="dutyCycleTxt"
+        min="0"
+        max="100"
+        class="form-control"
+        id="dutyCycleTxt"
+      />
     </div>
   </div>
   <div class="row">
     <div class="form-group col-md-4">
       <label class="control-label">Frequency (hertz)</label>
-      <input type="number" data-dojo-attach-point="frequencyTxt" min="1" max="1000" class="form-control" />
+      <input
+        type="number"
+        data-dojo-attach-point="frequencyTxt"
+        min="1"
+        max="1000"
+        class="form-control"
+        id="frequencyTxt"
+      />
     </div>
     <div class="form-group col-md-4">
       <label class="control-label">Amps</label>
-      <input type="number" data-dojo-attach-point="ampsTxt" min="0" max="150" step="0.1" class="form-control" />
+      <input
+        type="number"
+        data-dojo-attach-point="ampsTxt"
+        min="0"
+        max="150"
+        step="0.1"
+        class="form-control"
+        id="ampsTxt"
+      />
     </div>
     <div class="form-group col-md-4">
       <label class="control-label">Duration/Pedal Time (seconds)</label>
-      <input type="number" data-dojo-attach-point="durationTxt" min="1" max="7200" class="form-control" />
+      <input
+        type="number"
+        data-dojo-attach-point="durationTxt"
+        min="1"
+        max="7200"
+        class="form-control"
+        id="durationTxt"
+      />
     </div>
   </div>
   <button class="btn btn-default btn-sm" data-dojo-attach-point="btn">
