feat: port Station from dojo to react
Ref: #232

--- a/_src/react-app/components/location/Location.scss
+++ b/_src/react-app/components/location/Location.scss
@@ -1,6 +1,7 @@
 @use '../../../../src/app/location/resources/StartEndGeoDef.css';
 @use '../../../../src/app/location/resources/StartDistDirGeoDef.css';
 @use '../../../../src/app/location/resources/PointDef.css';
+@use 'Station';
 
 $width: 360px;
 .location {
