fix: move old css imports back to app package
this is because they are not present when sass is run

--- a/_src/app/resources/App.styl
+++ b/_src/app/resources/App.styl
@@ -12,6 +12,9 @@
 @import '../habitat/resources/Habitat.css';
 @import 'OtherOptionHandler.css';
 @import 'GridTab.css';
+@import '../location/resources/StartEndGeoDef.css';
+@import '../location/resources/StartDistDirGeoDef.css';
+@import '../location/resources/PointDef.css';
 
 .app .toaster {
     position: fixed;
