fix: initialize settings dialog and add a test

--- a/_src/app/templates/SettingsDialog.html
+++ b/_src/app/templates/SettingsDialog.html
@@ -27,7 +27,7 @@
                 data-dojo-attach-point="mouseWheelChBox"
                 data-dojo-attach-event="change: onMouseWheelChange"
               />
-              Mouse wheel zooming
+              Mouse wheel zooming (requires refresh)
             </label>
           </div>
         </div>
