chore: upgrade stream reach and point def components to react
- add sass loader to storybook
- move proj4 and proj4leaflet from bower to npm

--- a/_src/react-app/index.scss
+++ b/_src/react-app/index.scss
@@ -3,5 +3,6 @@
 @use 'components/Header';
 @use 'components/location/VerifyMap';
 @use 'components/location/Location';
+@use 'components/location/PointDef';
 @use '../../node_modules/react-toastify/scss/main.scss';
 @use '../../node_modules/leaflet/dist/leaflet.css';
