chore: upgrade StreamSearch to react
Ref #232

--- a/_src/react-app/index.scss
+++ b/_src/react-app/index.scss
@@ -4,5 +4,6 @@
 @use 'components/location/VerifyMap';
 @use 'components/location/Location';
 @use 'components/location/PointDef';
+@use 'components/location/StreamSearch';
 @use '../../node_modules/react-toastify/scss/main.scss';
 @use '../../node_modules/leaflet/dist/leaflet.css';
