--- a/_src/react-app/index.scss
+++ b/_src/react-app/index.scss
@@ -1,6 +1,7 @@
 @use 'App';
 @use 'components/ComboBox';
 @use 'components/Header';
+@use 'components/OtherOptionHandler';
 @use 'components/location/VerifyMap';
 @use 'components/location/Location';
 @use 'components/location/PointDef';
