--- a/_src/react-app/index.scss
+++ b/_src/react-app/index.scss
@@ -6,5 +6,7 @@
 @use 'components/location/Location';
 @use 'components/location/PointDef';
 @use 'components/location/StreamSearch';
+@use 'components/method/Method';
+@use 'components/DataGrid';
 @use '../../node_modules/react-toastify/scss/main.scss';
 @use '../../node_modules/leaflet/dist/leaflet.css';
