fix: clean up old styles

--- a/_src/app/habitat/resources/Habitat.styl
+++ b/_src/app/habitat/resources/Habitat.styl
@@ -1,3 +1,4 @@
+@import '../../../bootstrap-combobox/css/bootstrap-combobox.css';
 .habitat
     .text-danger .badge
         background-color #b94a48
