--- a/_src/react-app/index.scss
+++ b/_src/react-app/index.scss
@@ -1,4 +1,5 @@
 @use 'App';
+@use 'components/NewCollectionEvent';
 @use 'components/ComboBox';
 @use 'components/Header';
 @use 'components/OtherOptionHandler';
