fix: better layout for auth controls

--- a/_src/app/catch/resources/Catch.styl
+++ b/_src/app/catch/resources/Catch.styl
@@ -5,6 +5,7 @@
 @import 'Health.css'
 
 .catch
+    margin-top 10px
     [data-dojo-attach-point='gridDiv'], .bulk-upload-container
         margin-top 10px
 
