--- a/_src/react-app/App.scss
+++ b/_src/react-app/App.scss
@@ -2,7 +2,7 @@
   .inner-header {
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: space-between;
     span {
       color: #9d9d9d;
       display: flex;
