fix: React-ify Catch tab
Also includes:
Refactor sampling event context into separate module (for easier testability)

--- a/_src/react-app/components/DataGrid.scss
+++ b/_src/react-app/components/DataGrid.scss
@@ -1,9 +1,16 @@
 .data-grid {
   tr {
     height: 31.5px;
+    &.bold {
+      font-weight: bold;
+    }
   }
   td input {
     width: 100%;
     border: none;
+    background-color: transparent;
+    &:focus {
+      background-color: white;
+    }
   }
 }
