fix: React-ify Habitat Tab
#232

--- a/_src/react-app/index.scss
+++ b/_src/react-app/index.scss
@@ -12,6 +12,7 @@
 @use 'components/DataGrid';
 @use 'components/catch/Catch';
 @use 'components/GridTab';
+@use 'components/habitat/Habitat';
 
 @use '../../node_modules/react-toastify/scss/main.scss';
 @use '../../node_modules/leaflet/dist/leaflet.css';
